--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,24 +2,33 @@
 layout: default
 ---
 <div class="category-archive">
-  <h1>{{ page.title }}</h1>
+  <div class="category-header">
+    <h1>{{ page.title }}</h1>
+    {% assign sorted_posts = site.posts | where_exp: "post", "post.categories contains page.category" %}
+    <p class="category-count">{{ sorted_posts.size }} article{% if sorted_posts.size != 1 %}s{% endif %}</p>
+  </div>
 
-  {% assign sorted_posts = site.posts | where_exp: "post", "post.categories contains page.category" %}
-
-  <div class="post-list">
+  <div class="card-grid">
     {% for post in sorted_posts %}
-    <article class="post-preview">
-      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-      <div class="post-meta">
-        <time>{{ post.date | date: "%B %-d, %Y" }}</time>
-        {% if post.author %}
-          {% assign author = site.data.authors[post.author] %}
-          {% if author %} &middot; {{ author.name }}{% endif %}
+    <article class="card">
+      {% if post.image %}
+      <a href="{{ post.url | relative_url }}" class="card-image">
+        <img src="{{ post.image }}" alt="{{ post.title }}" loading="lazy">
+      </a>
+      {% endif %}
+      <div class="card-body">
+        <div class="card-meta">
+          <time>{{ post.date | date: "%b %-d, %Y" }}</time>
+          {% if post.author %}
+            {% assign author = site.data.authors[post.author] %}
+            {% if author %}<span class="meta-sep">&middot;</span> {{ author.name }}{% endif %}
+          {% endif %}
+        </div>
+        <h2 class="card-title"><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
+        {% if post.excerpt %}
+        <p class="card-excerpt">{{ post.excerpt | strip_html | truncatewords: 20 }}</p>
         {% endif %}
       </div>
-      {% if post.excerpt %}
-      <p>{{ post.excerpt | strip_html | truncatewords: 30 }}</p>
-      {% endif %}
     </article>
     {% endfor %}
   </div>
